--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mdx-js/react": "^2.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-reverse-portal": "^2.1.0",
     "theme-ui": "^0.14.5"
   },
   "devDependencies": {
